# practice

./: .gitmodules  dijkastra.cpp
dijkastra/: makefile
heap/: heap.cpp  makefile
weather/: CMakeLists.txt  README  makefile
